--- a/view/index.pug
+++ b/view/index.pug
@@ -6,10 +6,8 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='description', content='TouchLynx')
     meta(name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0')
-    link(href='base.css', rel='stylesheet')
-    link(rel='shortcut icon', href='favicon.ico', type='image/x-icon') 
+    link(href='../src/styles/base.styl', rel='stylesheet')
+    link(rel='shortcut icon', href='../src/statics/favicon.ico', type='image/x-icon') 
   body
     #app
-  script.
-    var uri = !{JSON.stringify(uri)}
-  script(src='app.js')
+  script(src='../src/app.js')
