--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -9,7 +9,7 @@
 #routes
   display flex
   	
-#home, #login, #protected
+#home, #register, #login, #protected
   width 200px
   margin-right 10px
   cursor pointer
@@ -31,6 +31,16 @@
   justify-content center
   align-items center
 
-#loginForm
+#loginForm, #registerForm
   display flex 
   flex-direction column
+
+#slider
+  display flex
+  border 1px solid #aaa
+  background white
+  #drag
+    width 50px
+    height 30px
+    position relative
+    
